--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
     password: ${DATABASE_PASSWORD:postgres}
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.xml
-    enabled: true
+    drop-first: true
